--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,28 +1,22 @@
-# This configuration is intended for development purpose, it's **your** responsibility to harden it for production
 version: '3.8'
 services:
   icbged-app:
     image: icbged
     environment:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
-      - SPRING_PROFILES_ACTIVE=prod,api-docs
+      - SPRING_PROFILES_ACTIVE=dev,api-docs
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
-      - SPRING_DATASOURCE_URL=jdbc:mysql://icbged-mysql:3306/icbged?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-      - SPRING_LIQUIBASE_URL=jdbc:mysql://icbged-mysql:3306/icbged?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-      - JHIPSTER_SLEEP=30 # gives time for other services to boot before the application
-    # If you want to expose these ports outside your dev PC,
-    # remove the "127.0.0.1:" prefix
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql-ff62e13-benarbia-f7b5.a.aivencloud.com:27703/defaultdb?sslMode=REQUIRED&user=avnadmin&password=AVNS_TN3z3VQwSsAYqL1my_o
+      - SPRING_LIQUIBASE_URL=jdbc:mysql://mysql-ff62e13-benarbia-f7b5.a.aivencloud.com:27703/defaultdb?sslMode=REQUIRED&user=avnadmin&password=AVNS_TN3z3VQwSsAYqL1my_o
+      - JHIPSTER_SLEEP=30
     ports:
       - 127.0.0.1:8080:8080
+
   icbged-mysql:
     image: mysql:8.0.28
-    # volumes:
-    #   - ~/volumes/jhipster/icbged/mysql/:/var/lib/mysql/
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=icbged
-    # If you want to expose these ports outside your dev PC,
-    # remove the "127.0.0.1:" prefix
     ports:
       - 127.0.0.1:3306:3306
     command: mysqld --lower_case_table_names=1 --skip-ssl --character_set_server=utf8mb4 --explicit_defaults_for_timestamp
